@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst prepare setup test
-DEPEND=dev-util/cmake dev-libs/openssl dev-libs/boost sys-devel/bison sys-devel/flex mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) apache2? ( =www-servers/apache-2* ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
-DESCRIPTION=Nagios Fork - Check daemon, CGIs, docs, IDOutils. Reloaded
+DEPEND=dev-util/cmake dev-lang/python:2.7 dev-libs/openssl dev-libs/boost sys-devel/bison sys-devel/flex mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) apache2? ( =www-servers/apache-2* ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
+DESCRIPTION=Distributed, general purpose, network monitoring engine
 EAPI=5
 HOMEPAGE=http://icinga.org/icinga2
 IUSE=+mysql postgres classicui +plugins apache2
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=dev-util/cmake dev-libs/openssl dev-libs/boost sys-devel/bison sys-devel/flex mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) plugins? ( net-analyzer/nagios-plugins ) classicui? ( net-analyzer/icinga[web] ) apache2? ( =www-servers/apache-2* )
+RDEPEND=dev-util/cmake dev-lang/python:2.7 dev-libs/openssl dev-libs/boost sys-devel/bison sys-devel/flex mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) plugins? ( net-analyzer/nagios-plugins ) classicui? ( net-analyzer/icinga[web] ) apache2? ( =www-servers/apache-2* )
 REQUIRED_USE=|| ( mysql postgres )
 SLOT=0
 SRC_URI=http://github.com/Icinga/icinga2/archive/v2.1.0.tar.gz -> icinga2-2.1.0.tar.gz
 _eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	depend.apache	1a38534d3f755d1ab1d92ce120bd7dbd	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d6ec53e733874fabc622141a8243ccd2
+_md5_=f5b9ccdddd0df5fd666edfdf4b0c4b71
