@@ -1,11 +1,11 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/icinga2-2.1.0.ebuild,v 1.1 2014/08/30 01:16:59 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/icinga2-2.1.0-r1.ebuild,v 1.1 2014/08/30 21:13:54 prometheanfire Exp $
 
 EAPI=5
 inherit depend.apache eutils cmake-utils toolchain-funcs user versionator systemd
 
-DESCRIPTION="Nagios Fork - Check daemon, CGIs, docs, IDOutils. Reloaded"
+DESCRIPTION="Distributed, general purpose, network monitoring engine"
 HOMEPAGE="http://icinga.org/icinga2"
 #PV=$(replace_version_separator 3 '-')
 SRC_URI="http://github.com/Icinga/icinga2/archive/v${PV}.tar.gz -> ${P}.tar.gz"
@@ -17,6 +17,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE="+mysql postgres classicui +plugins"
 
 DEPEND="dev-util/cmake
+		dev-lang/python:2.7
 		dev-libs/openssl
 		dev-libs/boost
 		sys-devel/bison
