@@ -1,6 +1,15 @@
 # ChangeLog for net-analyzer/icinga2
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/ChangeLog,v 1.5 2014/08/30 01:16:59 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/ChangeLog,v 1.7 2014/08/30 21:14:45 prometheanfire Exp $
+
+  30 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> metadata.xml:
+  updating manifest
+
+*icinga2-2.1.0-r1 (30 Aug 2014)
+
+  30 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +icinga2-2.1.0-r1.ebuild, -icinga2-2.1.0.ebuild:
+  fixing python dep
 
 *icinga2-2.1.0 (30 Aug 2014)
 
